Alignment issue in nav-page-with-direct-links after markup change fixed

--- a/src/stylesheets/nav_page_with_direct_links.scss
+++ b/src/stylesheets/nav_page_with_direct_links.scss
@@ -66,7 +66,7 @@ nav.nav-page-with-direct-links {
   }
 
   > ul > li > a,
-  .popular > li > h2 > a {
+  .popular > li > a{
     padding-top: emize(9, 16);
     padding-bottom: emize(9, 16);
   }
